--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
 {
-  "name": "nesttreino",
+  "name": "nestjs_base",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "description": "Template base para um projeto nest com padrão DDD e REST",
+  "main": "src/main.ts",
+  "keywords": [
+    "nest",
+    "nestjs",
+    "REST",
+    "API",
+    "Typescript"
+  ],
+  "files": [
+    "src/*",
+    "./*"
+  ],
+  "author": {
+    "name": "Eduardo Neves",
+    "email": "neveseduardoti@gmail.com",
+    "url": "https://github.com/neveseduardo"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neveseduardo/nestjs_base.git"
+  },
+  "bugs": {
+    "url": "https://github.com/neveseduardo/nestjs_base/issues"
+  },
+  "homepage": "https://github.com/neveseduardo/nestjs_base#readme",
+  "private": false,
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -56,22 +80,5 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
